--- a/css/style.css
+++ b/css/style.css
@@ -196,6 +196,16 @@ body {
 .headline3--color-text2 {
   color: var(--text-2);
 }
+@media (max-width: 47em) {
+  .headline3 {
+    font-size: 2.4rem;
+    line-height: 101%;
+  }
+  .headline3--sm-medium {
+    font-weight: 500;
+    line-height: 100%;
+  }
+}
 
 .headline4 {
   font-family: "Clash Grotesk Variable";
@@ -270,7 +280,7 @@ body {
   color: var(--text-black);
   text-transform: uppercase;
   text-decoration: none;
-  border-bottom: 1px var(--text-black) solid;
+  border-bottom: 1px currentColor solid;
 }
 @media (max-width: 47em) {
   .link1 {
@@ -283,8 +293,8 @@ body {
   font-style: normal;
   font-weight: 500;
   font-size: 1.6rem;
-  line-height: 2rem;
-  text-decoration-line: underline;
+  line-height: 100%;
+  border-bottom: 1.5px currentColor solid;
   text-transform: uppercase;
   color: var(--text-black);
 }
@@ -834,53 +844,158 @@ body {
 /*------------------news--------------------*/
 .news__inner {
   padding-bottom: 10rem;
-  grid-template-rows: 185px 85px 550px;
+  grid-template-rows: 18.5rem 8.5rem auto;
+}
+@media (max-width: 47em) {
+  .news__inner {
+    padding: 2rem 0 4rem 0;
+  }
+}
+@media (max-width: 27em) {
+  .news__inner {
+    padding: 2rem 0 3rem 0;
+  }
 }
 .news__caption {
   margin-top: 3.5rem;
   grid-column: 1/5;
+  grid-row: 1/2;
   place-self: start;
 }
+@media (max-width: 47em) {
+  .news__caption {
+    margin: 0;
+  }
+}
 .news__date {
-  max-width: 94px;
+  grid-column: 1/2;
+  grid-row: 2/3;
+  max-width: 9.4rem;
   overflow-wrap: break-word;
+}
+@media (max-width: 96em) {
+  .news__date {
+    grid-row: 1/2;
+    align-self: end;
+  }
+}
+@media (max-width: 47em) {
+  .news__date {
+    margin-top: 2rem;
+    max-width: 100%;
+    opacity: 70%;
+  }
 }
 .news__title {
   grid-column: 2/4;
+  grid-row: 2/3;
+}
+@media (max-width: 96em) {
+  .news__title {
+    grid-column: 2/4;
+    grid-row: 1/2;
+    align-self: end;
+  }
+}
+@media (max-width: 47em) {
+  .news__title {
+    margin-top: 1.5rem;
+  }
 }
 .news__descr {
   grid-column: 4/5;
   grid-row: 2/4;
   display: flex;
   flex-direction: column;
+  align-items: flex-start;
+}
+@media (max-width: 96em) {
+  .news__descr {
+    grid-column: 3/5;
+    grid-row: 3/4;
+  }
+}
+@media (max-width: 47em) {
+  .news__descr {
+    margin-top: 1.5rem;
+  }
 }
 .news__descr-text {
   flex: 1 1 auto;
-  padding-right: 35px;
+  padding-right: 3.5rem;
 }
 .news__descr-text p:not(:first-child) {
-  margin-top: 25px;
+  margin-top: 2.5rem;
+}
+@media (max-width: 47em) {
+  .news__descr-text p:not(:first-child) {
+    margin-top: 1rem;
+  }
+}
+@media (max-width: 47em) {
+  .news__descr-link {
+    margin-top: 2rem;
+    text-align: right;
+  }
 }
 .news__pic {
   grid-column: 1/3;
-  max-width: 550px;
+  grid-row: 3/4;
+  text-align: center;
+}
+@media (max-width: 47em) {
+  .news__pic {
+    margin-top: 4rem;
+  }
+}
+.news__pic img {
+  width: 100%;
+}
+@media (max-width: 96em) {
+  .news__pic img {
+    width: 75%;
+    justify-self: end;
+  }
+}
+@media (max-width: 47em) {
+  .news__pic img {
+    width: 100%;
+  }
 }
 .news__view {
   margin-top: 5rem;
   min-height: 16.4rem;
 }
+@media (max-width: 47em) {
+  .news__view {
+    margin-top: 2rem;
+    min-height: 7rem;
+  }
+}
+@media (max-width: 27em) {
+  .news__view {
+    margin-top: 4rem;
+    min-height: 8rem;
+  }
+}
 .news__view-link {
   grid-column: 4/5;
-  height: 24px;
-  width: 123px;
+  height: 2.4rem;
+  width: 12.3rem;
 }
 .news__view-link::after {
-  display: inline;
-  padding: 0 0 0 26px;
+  display: inline-block;
+  padding: 0 0 0 2.6rem;
   content: "";
-  background: url(../img/link_arrow.svg) right center no-repeat;
-  height: 16px;
-  width: 16px;
+  background: url(../img/link_arrow.svg) right/contain no-repeat;
+  height: 1.6rem;
+  width: 1.6rem;
+}
+@media (max-width: 47em) {
+  .news__view-link::after {
+    height: 1rem;
+    width: 1rem;
+  }
 }
 
 /*------------------footer--------------------*/
