--- a/css/style.css
+++ b/css/style.css
@@ -843,7 +843,7 @@ body {
 
 /*------------------news--------------------*/
 .news__inner {
-  padding-bottom: 10rem;
+  padding-bottom: 9.7rem;
   grid-template-rows: 18.5rem 8.5rem auto;
 }
 @media (max-width: 47em) {
@@ -932,6 +932,9 @@ body {
     margin-top: 1rem;
   }
 }
+.news__descr-link {
+  margin-bottom: 0.4rem;
+}
 @media (max-width: 47em) {
   .news__descr-link {
     margin-top: 2rem;
@@ -941,11 +944,11 @@ body {
 .news__pic {
   grid-column: 1/3;
   grid-row: 3/4;
-  text-align: center;
+  max-width: 55rem;
 }
 @media (max-width: 47em) {
   .news__pic {
-    margin-top: 4rem;
+    margin: 4rem auto 0 auto;
   }
 }
 .news__pic img {
@@ -954,7 +957,6 @@ body {
 @media (max-width: 96em) {
   .news__pic img {
     width: 75%;
-    justify-self: end;
   }
 }
 @media (max-width: 47em) {
