--- a/css/style.scss
+++ b/css/style.scss
@@ -934,7 +934,7 @@ body {
 /*------------------news--------------------*/
 .news {
   &__inner {
-    padding-bottom: 10rem;
+    padding-bottom: 9.7rem;
     grid-template-rows: 18.5rem 8.5rem auto;
 
     //752px
@@ -1030,6 +1030,8 @@ body {
     }
 
     &-link {
+      margin-bottom: 0.4rem;
+
       //752px
       @media (max-width: 47em) {
         margin-top: 2rem;
@@ -1041,12 +1043,11 @@ body {
   &__pic {
     grid-column: 1/3;
     grid-row: 3/4;
-    // max-width: 55rem;
-    text-align: center;
+    max-width: 55rem;
 
     //752px
     @media (max-width: 47em) {
-      margin-top: 4rem;
+      margin: 4rem auto 0 auto;
     }
 
     img {
@@ -1055,7 +1056,6 @@ body {
       //1536px
       @media (max-width: 96em) {
         width: 75%;
-        justify-self: end;
       }
 
       //752px
