--- a/css/style.css
+++ b/css/style.css
@@ -168,19 +168,30 @@ body {
 .headline1--white {
   color: var(--text-white);
 }
+@media (max-width: 86em) {
+  .headline1 {
+    font-size: 10rem;
+  }
+}
 @media (max-width: 63em) {
   .headline1 {
     font-size: 84px;
   }
 }
-@media (max-width: 47em) {
+@media (max-width: 52em) {
   .headline1 {
     font-size: 63px;
   }
 }
-@media (max-width: 29em) {
+@media (max-width: 33em) {
   .headline1 {
     font-size: 40px;
+  }
+}
+@media (max-width: 22em) {
+  .headline1--sm {
+    font-size: 32px;
+    overflow-wrap: break-word;
   }
 }
 
@@ -319,6 +330,31 @@ body {
   }
 }
 
+.circle-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 21rem;
+  width: 21rem;
+  min-height: 100%;
+  border-radius: 50%;
+  border: 1px #fff solid;
+  font-family: Clash Grotesk Variable;
+  font-size: 1.4rem;
+  font-weight: 500;
+  line-height: 1.7rem;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  background-color: transparent;
+  color: var(--text-white);
+}
+@media (max-width: 47em) {
+  .circle-button {
+    height: 12.4rem;
+    width: 12.4rem;
+  }
+}
+
 /*-------------------------colors and variables-------------------*/
 :root {
   --text-black: #1d1d1d;
@@ -396,22 +432,6 @@ body {
 .hero__title {
   text-align: center;
   color: var(--text-white);
-  width: 940px;
-}
-@media (max-width: 63em) {
-  .hero__title {
-    width: 663px;
-  }
-}
-@media (max-width: 47em) {
-  .hero__title {
-    width: 424px;
-  }
-}
-@media (max-width: 29em) {
-  .hero__title {
-    width: 269px;
-  }
 }
 .hero__logo {
   margin: 0.2rem 0 0 0.9rem;
@@ -1001,75 +1021,171 @@ body {
 }
 
 /*------------------footer--------------------*/
-.footer {
-  min-height: 999px;
-}
-.footer-wrap {
-  vertical-align: center;
-}
 .footer__marquee {
   min-height: 13.4rem;
-  border-bottom: 1px #fff solid;
+  border-bottom: 1px var(--text-white) solid;
+}
+@media (max-width: 47em) {
+  .footer__marquee {
+    min-height: 5.6rem;
+  }
+}
+.footer__inner {
+  display: grid;
+  align-items: center;
+  -moz-column-gap: 3.2rem;
+       column-gap: 3.2rem;
+  row-gap: 2rem;
+}
+@media (max-width: 47em) {
+  .footer__inner {
+    -moz-column-gap: 1rem;
+         column-gap: 1rem;
+    row-gap: 1rem;
+  }
+}
+@media (max-width: 27em) {
+  .footer__inner {
+    -moz-column-gap: 0.8rem;
+         column-gap: 0.8rem;
+    row-gap: 0.8rem;
+  }
+}
+@media (max-width: 19em) {
+  .footer__inner {
+    display: block;
+    text-align: center;
+  }
 }
 
-.footer-talk {
+.footer__talk {
   display: flex;
   padding: 12rem 0;
   justify-content: space-between;
   align-items: center;
-  border-bottom: 1px #fff solid;
+  gap: 1.5rem;
+  border-bottom: 1px var(--text-white) solid;
 }
-.footer-talk__title {
-  flex: 1 1 auto;
-  display: inline-block;
+@media (max-width: 99em) {
+  .footer__talk {
+    flex-direction: column;
+    gap: 3rem;
+  }
 }
-.footer-talk__title--right-img::after {
-  content: "";
-  display: inline-block;
-  margin: 0 0 -4px 6px;
-  background: url(../img/footer__contact-img1.png) right no-repeat;
-  height: 100px;
-  width: 160px;
+@media (max-width: 47em) {
+  .footer__talk {
+    padding: 5rem 0;
+  }
 }
-.footer-talk__title--left-img {
-  text-align: right;
+.footer__talk-btn {
+  flex: 0 0 21rem;
+  justify-self: center;
 }
-.footer-talk__title--left-img::before {
-  content: "";
-  display: inline-block;
-  margin: 0 36px -6px 403px;
-  background: url(../img/footer__contact-img2.png) right no-repeat;
-  height: 100px;
-  width: 160px;
-}
-.footer-talk__btn {
-  flex: 0 0 210px;
-  height: 210px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 100%;
-  border-radius: 50%;
-  border: 1px #fff solid;
-}
-.footer-talk__btn-text {
-  font-family: Clash Grotesk Variable;
-  font-size: 14px;
-  font-weight: 500;
-  line-height: 17px;
-  letter-spacing: 0.03em;
-  text-align: left;
-  text-transform: uppercase;
-  color: var(--text-white);
+@media (max-width: 47em) {
+  .footer__talk-btn {
+    flex-basis: 12.4rem;
+  }
 }
 
+.footer__talk-title1 {
+  grid-column: 1/2;
+  grid-row: 1/2;
+}
+
+.footer__talk-title2 {
+  grid-column: 2/3;
+  grid-row: 1/2;
+}
+
+.footer__talk-title3 {
+  grid-column: 2/4;
+  grid-row: 2/3;
+}
+
+.footer__talk-img1 {
+  grid-column: 3/4;
+  grid-row: 1/2;
+  width: 160px;
+  height: 100px;
+}
+@media (max-width: 52em) {
+  .footer__talk-img1 {
+    width: 90px;
+    height: 60px;
+  }
+}
+@media (max-width: 33em) {
+  .footer__talk-img1 {
+    width: 48px;
+    height: 30px;
+  }
+}
+
+.footer__talk-img2 {
+  grid-column: 1/2;
+  grid-row: 2/3;
+  justify-self: end;
+  width: 160px;
+  height: 100px;
+}
+@media (max-width: 52em) {
+  .footer__talk-img2 {
+    width: 100px;
+    height: 60px;
+    border-radius: 90px;
+  }
+}
+@media (max-width: 33em) {
+  .footer__talk-img2 {
+    width: 54px;
+    height: 30px;
+    border-radius: 20px;
+  }
+}
+
+@media (max-width: 99em) {
+  .footer__talk-title1 {
+    grid-column: 1/3;
+    grid-row: 1/2;
+  }
+  .footer__talk-title2 {
+    grid-column: 2/3;
+    grid-row: 2/3;
+  }
+  .footer__talk-title3 {
+    grid-column: 3/4;
+    grid-row: 2/3;
+  }
+}
 .footer-bottom {
   padding: 5rem 0 2rem 0;
   min-height: 37.3rem;
 }
+@media (max-width: 47em) {
+  .footer-bottom {
+    padding: 4rem 0 2rem 0;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    -moz-column-gap: 4rem;
+         column-gap: 4rem;
+  }
+}
+@media (max-width: 33em) {
+  .footer-bottom {
+    display: block;
+  }
+  .footer-bottom > :not(:first-child) {
+    margin-top: 4rem;
+  }
+}
 .footer-bottom__logo {
   display: inline-block;
   margin-bottom: 2.9rem;
+}
+@media (max-width: 47em) {
+  .footer-bottom__logo {
+    margin-bottom: 3.9rem;
+  }
 }
 .footer-bottom__info {
   display: flex;
@@ -1085,6 +1201,11 @@ body {
   grid-row: 1/2;
   list-style: none;
 }
+@media (max-width: 47em) {
+  .footer-bottom__mail {
+    grid-column: 2/3;
+  }
+}
 .footer-bottom__mail-item:not(:last-child) {
   margin-bottom: 1.5rem;
 }
@@ -1092,14 +1213,29 @@ body {
   flex: 1 1 auto;
 }
 .footer-bottom__copy {
-  grid-column: 1/2;
-  grid-row: 3/4;
+  grid-column: 1/3;
+  grid-row: 2/3;
+  align-self: end;
 }
 .footer-bottom__nav {
   display: flex;
   justify-content: space-between;
   grid-column: 4/5;
   grid-row: 1/2;
+  gap: 4rem;
+}
+@media (max-width: 47em) {
+  .footer-bottom__nav {
+    grid-column: 3/4;
+  }
+}
+@media (max-width: 33em) {
+  .footer-bottom__nav {
+    display: block;
+  }
+  .footer-bottom__nav-item:last-child {
+    margin-bottom: 4rem;
+  }
 }
 .footer-bottom__nav-item:not(:last-child) {
   margin-bottom: 1.5rem;
