--- a/css/style.scss
+++ b/css/style.scss
@@ -180,19 +180,32 @@ body {
     color: var(--text-white);
   }
 
+  //1376px
+  @media (max-width: 86em) {
+    font-size: 10rem;
+  }
+
   //1008px
   @media (max-width: 63em) {
     font-size: 84px;
   }
 
-  // 752px
-  @media (max-width: 47em) {
+  // 832px
+  @media (max-width: 52em) {
     font-size: 63px;
   }
 
-  // 464px
-  @media (max-width: 29em) {
+  // 528px
+  @media (max-width: 33em) {
     font-size: 40px;
+  }
+
+  // 352px
+  @media (max-width: 22em) {
+    &--sm {
+      font-size: 32px;
+      overflow-wrap: break-word;
+    }
   }
 }
 
@@ -335,6 +348,31 @@ body {
   }
 }
 
+.circle-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 21rem;
+  width: 21rem;
+  min-height: 100%;
+  border-radius: 50%;
+  border: 1px #fff solid;
+  font-family: Clash Grotesk Variable;
+  font-size: 1.4rem;
+  font-weight: 500;
+  line-height: 1.7rem;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  background-color: transparent;
+  color: var(--text-white);
+
+  //752px
+  @media (max-width: 47em) {
+    height: 12.4rem;
+    width: 12.4rem;
+  }
+}
+
 /*-------------------------colors and variables-------------------*/
 :root {
   --text-black: #1d1d1d;
@@ -417,22 +455,6 @@ body {
   &__title {
     text-align: center;
     color: var(--text-white);
-    width: 940px;
-
-    //1008px
-    @media (max-width: 63em) {
-      width: 663px;
-    }
-
-    // 752px
-    @media (max-width: 47em) {
-      width: 424px;
-    }
-
-    // 464px
-    @media (max-width: 29em) {
-      width: 269px;
-    }
   }
 
   &__logo {
@@ -1106,72 +1128,143 @@ body {
 
 /*------------------footer--------------------*/
 .footer {
-  min-height: 999px;
-
-  &-wrap {
-    vertical-align: center;
-  }
-
   &__marquee {
     min-height: 13.4rem;
-    border-bottom: 1px #fff solid;
+    border-bottom: 1px var(--text-white) solid;
+
+    //752px
+    @media (max-width: 47em) {
+      min-height: 5.6rem;
+    }
+  }
+
+  &__inner {
+    display: grid;
+    align-items: center;
+    column-gap: 3.2rem;
+    row-gap: 2rem;
+
+    // 752px
+    @media (max-width: 47em) {
+      column-gap: 1rem;
+      row-gap: 1rem;
+    }
+
+    // 432px
+    @media (max-width: 27em) {
+      column-gap: 0.8rem;
+      row-gap: 0.8rem;
+    }
+
+    // 304px
+    @media (max-width: 19em) {
+      display: block;
+      text-align: center;
+    }
   }
 }
 
-.footer-talk {
+.footer__talk {
   display: flex;
   padding: 12rem 0;
   justify-content: space-between;
   align-items: center;
-  border-bottom: 1px #fff solid;
+  gap: 1.5rem;
+  border-bottom: 1px var(--text-white) solid;
 
-  &__title {
-    flex: 1 1 auto;
-    display: inline-block;
-
-    &--right-img::after {
-      content: "";
-      display: inline-block;
-      margin: 0 0 -4px 6px;
-      background: url(../img/footer__contact-img1.png) right no-repeat;
-      height: 100px;
-      width: 160px;
-    }
-
-    &--left-img {
-      text-align: right;
-
-      &::before {
-        content: "";
-        display: inline-block;
-        margin: 0 36px -6px 403px;
-        background: url(../img/footer__contact-img2.png) right no-repeat;
-        height: 100px;
-        width: 160px;
-      }
-    }
+  //1584px
+  @media (max-width: 99em) {
+    flex-direction: column;
+    gap: 3rem;
   }
 
-  &__btn {
-    flex: 0 0 210px;
-    height: 210px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100%;
-    border-radius: 50%;
-    border: 1px #fff solid;
+  //752px
+  @media (max-width: 47em) {
+    padding: 5rem 0;
+  }
 
-    &-text {
-      font-family: Clash Grotesk Variable;
-      font-size: 14px;
-      font-weight: 500;
-      line-height: 17px;
-      letter-spacing: 0.03em;
-      text-align: left;
-      text-transform: uppercase;
-      color: var(--text-white);
+  &-btn {
+    flex: 0 0 21rem;
+    justify-self: center;
+
+    //752px
+    @media (max-width: 47em) {
+      flex-basis: 12.4rem;
     }
+  }
+}
+
+.footer__talk-title1 {
+  grid-column: 1/2;
+  grid-row: 1/2;
+}
+
+.footer__talk-title2 {
+  grid-column: 2/3;
+  grid-row: 1/2;
+}
+
+.footer__talk-title3 {
+  grid-column: 2/4;
+  grid-row: 2/3;
+}
+
+.footer__talk-img1 {
+  grid-column: 3/4;
+  grid-row: 1/2;
+  width: 160px;
+  height: 100px;
+
+  // 832px
+  @media (max-width: 52em) {
+    width: 90px;
+    height: 60px;
+  }
+
+  // 528px
+  @media (max-width: 33em) {
+    width: 48px;
+    height: 30px;
+  }
+}
+
+.footer__talk-img2 {
+  grid-column: 1/2;
+  grid-row: 2/3;
+  justify-self: end;
+  width: 160px;
+  height: 100px;
+
+  // 832px
+  @media (max-width: 52em) {
+    width: 100px;
+    height: 60px;
+    border-radius: 90px;
+  }
+
+  // 528px
+  @media (max-width: 33em) {
+    width: 54px;
+    height: 30px;
+    border-radius: 20px;
+  }
+}
+
+//1584px
+@media (max-width: 99em) {
+  .footer__talk-title1 {
+    grid-column: 1/3;
+    grid-row: 1/2;
+  }
+
+  .footer__talk-title2 {
+    grid-column: 2/3;
+    grid-row: 2/3;
+  }
+
+  .footer__talk-title3 {
+    grid-column: 3/4;
+    grid-row: 2/3;
   }
 }
 
@@ -1179,9 +1272,31 @@ body {
   padding: 5rem 0 2rem 0;
   min-height: 37.3rem;
 
+  //752px
+  @media (max-width: 47em) {
+    padding: 4rem 0 2rem 0;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    column-gap: 4rem;
+  }
+
+  // 528px
+  @media (max-width: 33em) {
+    display: block;
+
+    & > :not(:first-child) {
+      margin-top: 4rem;
+    }
+  }
+
   &__logo {
     display: inline-block;
     margin-bottom: 2.9rem;
+
+    //752px
+    @media (max-width: 47em) {
+      margin-bottom: 3.9rem;
+    }
   }
 
   &__info {
@@ -1200,6 +1315,11 @@ body {
     grid-row: 1/2;
     list-style: none;
 
+    //752px
+    @media (max-width: 47em) {
+      grid-column: 2/3;
+    }
+
     &-item:not(:last-child) {
       margin-bottom: 1.5rem;
     }
@@ -1210,8 +1330,9 @@ body {
   }
 
   &__copy {
-    grid-column: 1/2;
-    grid-row: 3/4;
+    grid-column: 1/3;
+    grid-row: 2/3;
+    align-self: end;
   }
 
   &__nav {
@@ -1219,6 +1340,21 @@ body {
     justify-content: space-between;
     grid-column: 4/5;
     grid-row: 1/2;
+    gap: 4rem;
+
+    //752px
+    @media (max-width: 47em) {
+      grid-column: 3/4;
+    }
+
+    // 528px
+    @media (max-width: 33em) {
+      display: block;
+
+      &-item:last-child {
+        margin-bottom: 4rem;
+      }
+    }
 
     &-item:not(:last-child) {
       margin-bottom: 1.5rem;
