--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,6 @@ ul {
   list-style: none;
 }
 
-a,
 a:link,
 a:visited,
 a:hover,
@@ -338,7 +337,7 @@ body {
   width: 21rem;
   min-height: 100%;
   border-radius: 50%;
-  border: 1px #fff solid;
+  border: 1px var(--text-white) solid;
   font-family: Clash Grotesk Variable;
   font-size: 1.4rem;
   font-weight: 500;
