--- a/css/style.scss
+++ b/css/style.scss
@@ -501,7 +501,7 @@ body {
     left: 0;
     top: 0;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     background-color: var(--element-black);
     z-index: 5;
   }
@@ -558,7 +558,7 @@ body {
   }
 
   &__nav-item:not(:last-child) {
-    margin-bottom: 1.5rem;
+    margin-bottom: 15px;
   }
 
   &__nav-column:last-child {
@@ -585,15 +585,16 @@ body {
     opacity: 1;
     visibility: visible;
     pointer-events: auto;
+    text-align: center;
     transition: opacity 0.5s ease-in-out;
   }
 
   .open-mob-menu .header__nav-item:not(:last-child) {
-    margin-bottom: 0.4rem;
+    margin-bottom: 4px;
   }
 
   .open-mob-menu .header__nav-column:not(:last-child) {
-    margin-bottom: 0.4rem;
+    margin-bottom: 4px;
   }
 
   .open-mob-menu .header__lang {
@@ -609,7 +610,7 @@ body {
   }
 
   .open-mob-menu .header__lang-btn:not(:last-child) {
-    margin: 0 1.5rem 0 0;
+    margin: 0 15px 0 0;
   }
 }
 
