--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -20,6 +20,10 @@ body {
   &--opacity1 {
     opacity: 1;
   }
+
+  &--black {
+    color: var(--text-black);
+  }
 }
 
 //1008px
@@ -73,6 +77,19 @@ body {
       font-size: 32px;
       overflow-wrap: break-word;
     }
+  }
+}
+
+.headline2 {
+  font-family: Clash Grotesk Variable;
+  font-size: 10rem;
+  font-weight: 400;
+  color: var(--text-black);
+  line-height: 90%;
+  text-transform: uppercase;
+
+  &--color-text {
+    color: var(--text-3);
   }
 }
 
@@ -148,6 +165,35 @@ body {
   letter-spacing: 0em;
   text-align: left;
   color: var(--text-black);
+
+  // 752px
+  @media (max-width: 47em) {
+    font-size: 1.8rem;
+  }
+
+  &--uppercase {
+    text-transform: uppercase;
+  }
+}
+
+.text3 {
+  font-family: "Clash Grotesk Variable";
+  font-size: 1.6rem;
+  font-style: normal;
+  font-weight: 400;
+  color: var(--text-black, #1d1d1d);
+  line-height: 110%;
+}
+
+.button-text {
+  font-family: "Clash Grotesk Variable";
+  font-size: 2.5rem;
+  font-style: normal;
+  font-weight: 500;
+  color: var(--text-black);
+  line-height: 100%;
+  text-transform: uppercase;
+  text-align: center;
 
   // 752px
   @media (max-width: 47em) {
