--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -1,4 +1,23 @@
 .header {
+  &__inner {
+    padding-top: 50px;
+    position: relative;
+    z-index: 2;
+
+    //1008px
+    @media (max-width: 63em) {
+      padding-top: 50px;
+      display: flex;
+      justify-content: space-between;
+      align-items: flex-start;
+    }
+
+    // 752px
+    @media (max-width: 47em) {
+      padding-top: 1.3rem;
+    }
+  }
+
   &__logo {
     margin-left: 0.9rem;
 
@@ -58,6 +77,28 @@
 
   &__nav-item {
     list-style: none;
+  }
+}
+
+//1008px
+.open-mob-menu .header__inner {
+  @media (max-width: 63em) {
+    padding: 8.34rem 12.34rem;
+    display: grid;
+    grid-template-rows: auto 1fr auto;
+    grid-template-columns: repeat(2, auto);
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: var(--element-black);
+    z-index: 5;
+  }
+
+  // 752px
+  @media (max-width: 47em) {
+    padding: 1.3rem 1rem 4rem 1rem;
   }
 }
 
