--- a/scss/components/_logo-img.scss
+++ b/scss/components/_logo-img.scss
@@ -1,10 +1,12 @@
 .logo-img {
-  width: 20rem;
-  height: 2.4rem;
+  width: 20.8rem;
+  height: 3.2rem;
 
   //752px
-  @media (max-width: 47em) {
-    width: 11.5rem;
-    height: 1.4rem;
+  &--mob-sm {
+    @media (max-width: 47em) {
+      width: 11.7rem;
+      height: 2.3rem;
+    }
   }
 }
