--- a/scss/components/_long-button.scss
+++ b/scss/components/_long-button.scss
@@ -1,10 +1,6 @@
 .long-button {
   height: 10rem;
-  font-family: "Clash Grotesk Variable";
-  font-weight: 500;
-  font-size: 2.5rem;
-  line-height: 100%;
-  text-align: center;
+  width: 100%;
   text-transform: uppercase;
   color: var(--text-black);
   border: 1px solid var(--element-black);
@@ -14,6 +10,5 @@
   // 752px
   @media (max-width: 47em) {
     height: 8rem;
-    font-size: 1.8rem;
   }
 }
