--- a/scss/layout/_phylosophy.scss
+++ b/scss/layout/_phylosophy.scss
@@ -1,6 +1,6 @@
 .phylosophy {
-  margin-top: calc(var(--phylosophy-rounded-top) * -1);
-  padding-top: var(--phylosophy-rounded-top);
+  margin-top: calc(var(--section-rounded-top) * -1);
+  padding-top: var(--section-rounded-top);
   position: relative;
   z-index: 2;
 
