--- a/scss/style.scss
+++ b/scss/style.scss
@@ -14,6 +14,7 @@
 @import "layout/projects";
 @import "layout/awards";
 @import "layout/news";
+@import "layout/contact-form";
 @import "layout/footer";
 
 @import "components/header";
