--- a/scss/components/_circle-button.scss
+++ b/scss/components/_circle-button.scss
@@ -15,6 +15,7 @@
   text-transform: uppercase;
   background-color: transparent;
   color: var(--text-white);
+  cursor: pointer;
 
   //752px
   @media (max-width: 47em) {
