--- a/css/style.css
+++ b/css/style.css
@@ -424,7 +424,7 @@ html {
 }
 
 body {
-  background-color: var(--text-white);
+  background-color: var(--background-white);
   overflow-x: hidden;
 }
 
@@ -652,13 +652,16 @@ body {
 .rounded-corners {
   border-radius: 9rem 9rem 0 0;
 }
+.rounded-corners--neg-margin {
+  margin-top: calc(var(--section-rounded-top) * -1);
+}
 @media (max-width: 47em) {
   .rounded-corners {
     border-radius: 4rem 4rem 0 0;
   }
 }
 .rounded-corners--white {
-  background-color: var(--text-white);
+  background-color: var(--background-white);
 }
 .rounded-corners--black {
   background-color: var(--element-black);
@@ -763,7 +766,6 @@ body {
 }
 
 .phylosophy {
-  margin-top: calc(var(--section-rounded-top) * -1);
   padding-top: var(--section-rounded-top);
   position: relative;
   z-index: 2;
@@ -1197,10 +1199,13 @@ body {
 
 .contact-form {
   background-color: var(--background-light);
-  padding-bottom: calc(14rem + var(--section-rounded-top));
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.5s ease-in;
 }
 .contact-form__inner {
-  margin: 10.4rem 0 0 0;
+  margin-top: 10.4rem;
+  margin-bottom: calc(var(--section-rounded-top) + 14rem);
 }
 .contact-form__content {
   grid-column: 1/3;
@@ -1280,7 +1285,10 @@ body {
 }
 
 .footer {
-  margin-top: calc(var(--section-rounded-top) * -1);
+  position: relative;
+  z-index: 2;
+  background-color: var(--element-black);
+  transition: margin-top 0.5s ease-in;
 }
 .footer__marquee {
   min-height: 13.4rem;
@@ -1663,6 +1671,7 @@ body {
   text-transform: uppercase;
   background-color: transparent;
   color: var(--text-white);
+  cursor: pointer;
 }
 @media (max-width: 47em) {
   .circle-button {
