--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -37,7 +37,7 @@ html {
 }
 
 body {
-  background-color: var(--text-white);
+  background-color: var(--background-white);
   overflow-x: hidden;
 }
 
