--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -1,5 +1,8 @@
 .footer {
-  margin-top: calc(var(--section-rounded-top) * -1);
+  position: relative;
+  z-index: 2;
+  background-color: var(--element-black);
+  transition: margin-top 0.5s ease-in;
 
   &__marquee {
     min-height: 13.4rem;
