Feat: make contact-form section responsive

--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -1,3 +1,39 @@
+/*Responsive breakpoints
+
+//1584px
+@media (max-width: 99em)
+
+//1536px
+@media (max-width: 96em)
+
+//1376px
+@media (max-width: 86em)
+
+//1248px
+@media (max-width: 78em)
+
+//1008px
+@media (max-width: 63em)
+
+//832px
+@media (max-width: 52em)
+
+//752px
+@media (max-width: 47em)
+
+//528px
+@media (max-width: 33em)
+
+//432px
+@media (max-width: 27em)
+
+//352px
+@media (max-width: 22em)
+
+//304px
+@media (max-width: 19em)
+*/
+
 *,
 *::before,
 *::after {
