--- a/css/style.css
+++ b/css/style.css
@@ -385,6 +385,41 @@ template {
   font-display: swap;
   font-style: normal;
 }
+/*Responsive breakpoints
+
+//1584px
+@media (max-width: 99em)
+
+//1536px
+@media (max-width: 96em)
+
+//1376px
+@media (max-width: 86em)
+
+//1248px
+@media (max-width: 78em)
+
+//1008px
+@media (max-width: 63em)
+
+//832px
+@media (max-width: 52em)
+
+//752px
+@media (max-width: 47em)
+
+//528px
+@media (max-width: 33em)
+
+//432px
+@media (max-width: 27em)
+
+//352px
+@media (max-width: 22em)
+
+//304px
+@media (max-width: 19em)
+*/
 *,
 *::before,
 *::after {
@@ -508,7 +543,7 @@ body {
 }
 
 .headline2 {
-  font-family: Clash Grotesk Variable;
+  font-family: "Clash Grotesk Variable";
   font-size: 10rem;
   font-weight: 400;
   color: var(--text-black);
@@ -517,6 +552,16 @@ body {
 }
 .headline2--color-text {
   color: var(--text-3);
+}
+@media (max-width: 47em) {
+  .headline2 {
+    font-size: 5.2rem;
+  }
+}
+@media (max-width: 27em) {
+  .headline2 {
+    font-size: 4rem;
+  }
 }
 
 .headline3 {
@@ -1204,8 +1249,18 @@ body {
   transition: max-height 0.5s ease-in;
 }
 .contact-form__inner {
-  margin-top: 10.4rem;
+  margin-top: var(--section-rounded-top);
   margin-bottom: calc(var(--section-rounded-top) + 14rem);
+}
+@media (max-width: 47em) {
+  .contact-form__inner {
+    margin-bottom: calc(var(--section-rounded-top) + 9rem);
+  }
+}
+@media (max-width: 27em) {
+  .contact-form__inner {
+    margin-bottom: calc(var(--section-rounded-top) + 7rem);
+  }
 }
 .contact-form__content {
   grid-column: 1/3;
@@ -1215,12 +1270,37 @@ body {
 .contact-form__title {
   flex: 1 1 auto;
 }
+@media (max-width: 47em) {
+  .contact-form__title {
+    text-align: center;
+  }
+}
+.contact-form__title-span {
+  display: block;
+}
+@media (max-width: 47em) {
+  .contact-form__title-span {
+    display: inline;
+  }
+}
 .contact-form__input {
   grid-column: 3/5;
   row-gap: 2rem;
 }
 .contact-form__input-item:nth-child(n+3) {
   grid-column: span 2;
+}
+@media (max-width: 47em) {
+  .contact-form__input {
+    display: grid;
+    margin-top: 4rem;
+  }
+}
+@media (max-width: 33em) {
+  .contact-form__input {
+    display: block;
+    margin-top: 3rem;
+  }
 }
 .contact-form__form-field {
   padding: 3.8rem 8.7rem 3.8rem 6rem;
@@ -1230,6 +1310,18 @@ body {
   border-radius: 9rem;
   border: none;
 }
+@media (max-width: 47em) {
+  .contact-form__form-field {
+    padding: 1.9rem 4.35rem 1.9rem 3rem;
+    min-height: 7rem;
+    border-radius: 4rem;
+  }
+}
+@media (max-width: 33em) {
+  .contact-form__form-field {
+    margin-bottom: 2rem;
+  }
+}
 .contact-form__textarea {
   padding: 3.8rem 8.7rem 5.9rem 6rem;
   min-height: 40rem;
@@ -1238,6 +1330,18 @@ body {
   border-radius: 9rem;
   border: none;
 }
+@media (max-width: 47em) {
+  .contact-form__textarea {
+    padding: 1.9rem 4.35rem 2.95rem 3rem;
+    min-height: 35rem;
+    border-radius: 4rem;
+  }
+}
+@media (max-width: 33em) {
+  .contact-form__textarea {
+    min-height: 30rem;
+  }
+}
 .contact-form__long-button {
   margin-top: 3rem;
 }
@@ -1245,9 +1349,43 @@ body {
   position: relative;
   top: -0.65rem;
 }
+@media (max-width: 47em) {
+  .contact-form__info {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-top: 2rem;
+  }
+}
+@media (max-width: 33em) {
+  .contact-form__info {
+    display: block;
+  }
+  .contact-form__info p {
+    text-align: center;
+  }
+}
+.contact-form__info-span {
+  display: block;
+}
+@media (max-width: 33em) {
+  .contact-form__info-span {
+    display: inline;
+  }
+}
 .contact-form__info a {
-  display: inline-block;
+  display: block;
   margin-top: 3.1rem;
+}
+@media (max-width: 47em) {
+  .contact-form__info a {
+    margin-top: 0.4rem;
+  }
+}
+@media (max-width: 33em) {
+  .contact-form__info a {
+    text-align: center;
+  }
 }
 .contact-form__sign-me {
   margin-top: 1rem;
