--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -201,8 +201,12 @@
     }
   }
 
-  &__adress {
+  &__address {
     flex: 1 1 auto;
+
+    &-span {
+      display: block;
+    }
   }
 
   &__copy {
