--- a/scss/style.scss
+++ b/scss/style.scss
@@ -10,7 +10,7 @@
 @import "layout/container";
 @import "layout/grid";
 @import "layout/hero";
-@import "layout/phylosophy";
+@import "layout/philosophy";
 @import "layout/projects";
 @import "layout/awards";
 @import "layout/news";
