--- a/css/style.css
+++ b/css/style.css
@@ -485,12 +485,16 @@ body {
   text-transform: uppercase;
   color: var(--text-white);
   opacity: 0.6;
+  transition: opacity 0.3s;
 }
 .menu-font--opacity1 {
   opacity: 1;
 }
 .menu-font--black {
   color: var(--text-black);
+}
+.menu-font:hover {
+  opacity: 1;
 }
 
 @media (max-width: 63em) {
