--- a/scss/components/_circle-button.scss
+++ b/scss/components/_circle-button.scss
@@ -16,10 +16,21 @@
   background-color: transparent;
   color: var(--text-white);
   cursor: pointer;
+  transition: font-size 0.3s, opacity 0.3s, color 0.3s, background-color 0.3s;
 
   //752px
   @media (max-width: 47em) {
     height: 12.4rem;
     width: 12.4rem;
+  }
+
+  &:hover {
+    font-size: 2.4em;
+  }
+
+  &:active {
+    opacity: 0.95;
+    color: var(--text-black);
+    background-color: var(--text-white);
   }
 }
