--- a/scss/components/_long-button.scss
+++ b/scss/components/_long-button.scss
@@ -6,9 +6,19 @@
   border: 1px solid var(--element-black);
   border-radius: 7.4rem;
   background-color: transparent;
+  transition: background-color 0.3s, color 0.3s, opacity 0.3s;
 
   // 752px
   @media (max-width: 47em) {
     height: 8rem;
+  }
+
+  &:hover {
+    background-color: var(--element-black);
+    color: var(--text-white);
+  }
+
+  &:active {
+    opacity: 0.95;
   }
 }
