--- a/scss/components/_circle-button.scss
+++ b/scss/components/_circle-button.scss
@@ -23,9 +23,10 @@
     height: 12.4rem;
     width: 12.4rem;
   }
-
-  &:hover {
-    font-size: 2.4em;
+  @media (hover: hover) {
+    &:hover {
+      font-size: 2.4em;
+    }
   }
 
   &:active {
