--- a/scss/style.scss
+++ b/scss/style.scss
@@ -23,3 +23,4 @@
 @import "components/circle-button";
 @import "components/long-button";
 @import "components/mob-menu-btn";
+@import "components/marquee";
